tests/security/taintPropertyPassingObject/output.txt
ERROR: TaintedData - input.hack:16:22 - Data from a URL query string found its way to a SQL query